[package]
name = "cutters"
version = "0.1.4"
authors = ["cyanic-selkie <cyanic-selkie@protonmail.com>"]
edition = "2021"
description = "Rule based sentence segmentation library."
license = "MIT"
readme = "README.md"
repository = "https://github.com/cyanic-selkie/cutters"
categories = ["text-processing"]

[dependencies]
pest = "=2.5.7"
pest_derive = "=2.5.7"
