[package]
name = "cutters-python"
version = "0.1.2"
authors = ["cyanic-selkie <cyanic-selkie@protonmail.com>"]
edition = "2021"

[lib]
name = "cutters"
crate-type = ["cdylib"]

[dependencies.cutters]
version = "*"
path = "../../cutters"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
