[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "cutters"
version = "0.1.4"
authors = [
    {name = "cyanic-selkie", email = "cyanic-selkie@protonmail.com"}
]
license = {text = "MIT"}
description = "A rule based sentence segmentation library."
readme = "README.md"
classifiers=[
    "Natural Language :: Croatian",
    "Natural Language :: English",
    "Topic :: Text Processing",
]

[project.urls]
Repository = "https://github.com/cyanic-selkie/cutters"
